...
    
    @State var isSettingsScreenPresented = false
    
    var body: some View {
        Button { isSettingsScreenPresented = true }
        label: {
            Image(systemName: "gearshape")
                .resizable()
                .foregroundColor(DarkThemeSettingsIconColor)
                .fontWeight(.light)
                .frame(width: 18, height: 18)
                .padding(.trailing, 10)
        }.sheet(isPresented: $isSettingsScreenPresented) {
...
