...
    @Binding var isOn1: Bool
    
    var body: some View {
        
        HStack {
            IconStyle(image: "shield.lefthalf.filled.badge.checkmark")
            Toggle("Authenticator App", isOn: $isOn1)
                .foregroundColor(DarkThemeStandartTextColor)
                .font(Font.custom("ubuntu-bold", size: 17))
        }
        .padding(.bottom, 10)
        
        HStack {
...
