...
struct ProfilePicture: View {
    
    let rectagnleSize: CGFloat
    let imageSize: CGFloat
    
    private enum Constants {
        static let profileImageName = "profile_picture"
        static let rectangleClipShapeRoundedCornerRadius: CGFloat = 90
        static let imageClipShapeRoundedCornerRadius: CGFloat = 90
        static let rectangleShadowRadius: CGFloat = 1
        static let imageShadowRadius: CGFloat = 1
    }
    
...
